{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 263,
  "lineage": "c9dcd4bc-dc59-13ef-a0b5-074f176df713",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750375256738:vpc/vpc-0e5438615f5248655",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0d9d8068e9882c4c8",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0db80d281c489289e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e5438615f5248655",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01976f739fce8253a",
            "owner_id": "750375256738",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02dfbd4ff395f2a1b",
            "arn": "arn:aws:ec2:us-east-1:750375256738:instance/i-02774ae073f1bb789",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-02774ae073f1bb789",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06972ba166167a8f1"
              }
            ],
            "primary_network_interface_id": "eni-06972ba166167a8f1",
            "private_dns": "ip-172-31-75-191.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.75.191",
            "public_dns": "ec2-44-221-50-92.compute-1.amazonaws.com",
            "public_ip": "44.221.50.92",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-049a3a5ea360c6c7b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "api_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0073dbfbd50821cc8",
            "tags": {
              "Name": "iot-api",
              "Role": "BackendAPI"
            },
            "tags_all": {
              "Name": "iot-api",
              "Role": "BackendAPI"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03cba12073886dc10"
            ]
          },
          "dependencies": [
            "aws_security_group.api_sg",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02dfbd4ff395f2a1b",
            "arn": "arn:aws:ec2:us-east-1:750375256738:instance/i-0e584557b4fc0d27f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-0e584557b4fc0d27f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ccef8dc2fb1223da"
              }
            ],
            "primary_network_interface_id": "eni-0ccef8dc2fb1223da",
            "private_dns": "ip-172-31-78-146.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.78.146",
            "public_dns": "ec2-32-194-169-116.compute-1.amazonaws.com",
            "public_ip": "32.194.169.116",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-022fd06d7c0b39f60",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "balancer_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0073dbfbd50821cc8",
            "tags": {
              "Name": "iot-balancer",
              "Role": "LoadBalancer"
            },
            "tags_all": {
              "Name": "iot-balancer",
              "Role": "LoadBalancer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b85c36a31217f082"
            ]
          },
          "dependencies": [
            "aws_instance.api",
            "aws_security_group.api_sg",
            "aws_security_group.balancer_sg",
            "aws_ssm_parameter.api_ip",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "consumer_delete",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02dfbd4ff395f2a1b",
            "arn": "arn:aws:ec2:us-east-1:750375256738:instance/i-01ac9f519bf24b8c0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-01ac9f519bf24b8c0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02948bc402938c7f0"
              }
            ],
            "primary_network_interface_id": "eni-02948bc402938c7f0",
            "private_dns": "ip-172-31-75-30.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.75.30",
            "public_dns": "ec2-3-238-228-16.compute-1.amazonaws.com",
            "public_ip": "3.238.228.16",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01943117c8aed7eae",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "consumer_delete_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0073dbfbd50821cc8",
            "tags": {
              "Name": "iot-consumer-delete",
              "Role": "AsyncWorker"
            },
            "tags_all": {
              "Name": "iot-consumer-delete",
              "Role": "AsyncWorker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0343d04178e038a8d"
            ]
          },
          "dependencies": [
            "aws_security_group.consumer_delete_sg",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "consumer_post",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02dfbd4ff395f2a1b",
            "arn": "arn:aws:ec2:us-east-1:750375256738:instance/i-0c6375a2493657699",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "LabInstanceProfile",
            "id": "i-0c6375a2493657699",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f39cb4bdd058b452"
              }
            ],
            "primary_network_interface_id": "eni-0f39cb4bdd058b452",
            "private_dns": "ip-172-31-69-189.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.69.189",
            "public_dns": "ec2-44-192-13-61.compute-1.amazonaws.com",
            "public_ip": "44.192.13.61",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d2ce8550b2f0d7db",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "consumer_post_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0073dbfbd50821cc8",
            "tags": {
              "Name": "iot-consumer-post",
              "Role": "AsyncWorker"
            },
            "tags_all": {
              "Name": "iot-consumer-post",
              "Role": "AsyncWorker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e7b295b1a210c5b3"
            ]
          },
          "dependencies": [
            "aws_security_group.consumer_post_sg",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02dfbd4ff395f2a1b",
            "arn": "arn:aws:ec2:us-east-1:750375256738:instance/i-0ba3a55dedd673d63",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ba3a55dedd673d63",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0e73332675ddd7fa3"
              }
            ],
            "primary_network_interface_id": "eni-0e73332675ddd7fa3",
            "private_dns": "ip-172-31-74-216.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.74.216",
            "public_dns": "ec2-34-204-194-217.compute-1.amazonaws.com",
            "public_ip": "34.204.194.217",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ffd37ce971123018",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "postgres_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0073dbfbd50821cc8",
            "tags": {
              "Name": "iot-postgres",
              "Role": "Database"
            },
            "tags_all": {
              "Name": "iot-postgres",
              "Role": "Database"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05ad0f1bd8de19e2a"
            ]
          },
          "dependencies": [
            "aws_security_group.postgres_sg",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "rabbitmq",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02dfbd4ff395f2a1b",
            "arn": "arn:aws:ec2:us-east-1:750375256738:instance/i-04adaf4d01deb61c4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04adaf4d01deb61c4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0487f4e23bbf0e624"
              }
            ],
            "primary_network_interface_id": "eni-0487f4e23bbf0e624",
            "private_dns": "ip-172-31-68-211.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.68.211",
            "public_dns": "ec2-44-213-65-95.compute-1.amazonaws.com",
            "public_ip": "44.213.65.95",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bb484a2ed1eb5ef9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "rabbitmq_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0073dbfbd50821cc8",
            "tags": {
              "Name": "iot-rabbitmq",
              "Role": "MessageBroker"
            },
            "tags_all": {
              "Name": "iot-rabbitmq",
              "Role": "MessageBroker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a974b2c96038af40"
            ]
          },
          "dependencies": [
            "aws_security_group.rabbitmq_sg",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750375256738:security-group/sg-03cba12073886dc10",
            "description": "Allow SSH and Flask API",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03cba12073886dc10",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "api_sg",
            "name_prefix": "",
            "owner_id": "750375256738",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "api_sg"
            },
            "tags_all": {
              "Name": "api_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5438615f5248655"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "balancer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750375256738:security-group/sg-0b85c36a31217f082",
            "description": "Allow SSH only for Producer (initiates outbound connections)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b85c36a31217f082",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "balancer_sg",
            "name_prefix": "",
            "owner_id": "750375256738",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "balancer_sg"
            },
            "tags_all": {
              "Name": "balancer_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5438615f5248655"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "consumer_delete_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750375256738:security-group/sg-0343d04178e038a8d",
            "description": "Allow SSH only for Consumer DELETE (initiates outbound connections)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0343d04178e038a8d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "consumer_delete_sg",
            "name_prefix": "",
            "owner_id": "750375256738",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "consumer_delete_sg"
            },
            "tags_all": {
              "Name": "consumer_delete_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5438615f5248655"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "consumer_post_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750375256738:security-group/sg-0e7b295b1a210c5b3",
            "description": "Allow SSH only for Consumer POST (initiates outbound connections)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e7b295b1a210c5b3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "consumer_post_sg",
            "name_prefix": "",
            "owner_id": "750375256738",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "consumer_post_sg"
            },
            "tags_all": {
              "Name": "consumer_post_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5438615f5248655"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "postgres_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750375256738:security-group/sg-05ad0f1bd8de19e2a",
            "description": "Allow SSH and PostgreSQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ad0f1bd8de19e2a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "postgres_sg",
            "name_prefix": "",
            "owner_id": "750375256738",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "postgres_sg"
            },
            "tags_all": {
              "Name": "postgres_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5438615f5248655"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rabbitmq_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750375256738:security-group/sg-0a974b2c96038af40",
            "description": "Allow SSH, AMQP, and RabbitMQ Management API",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a974b2c96038af40",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 15672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 15672
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5672
              }
            ],
            "name": "rabbitmq_sg",
            "name_prefix": "",
            "owner_id": "750375256738",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rabbitmq_sg"
            },
            "tags_all": {
              "Name": "rabbitmq_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e5438615f5248655"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}